Fix for when the browser calls "Destroy" twice for some XPCOM plugins bug 104038 r=av sr=attinasi